<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/monument_menu__back"
        android:title="@string/general__back_main"
        android:icon="@drawable/ic_back"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/monument_menu__options_block"
        android:title="@string/monument_menu__options_block"
        android:icon="@drawable/ic_options_icon"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/monument_menu__delete"
                android:title="@string/monument_list_toolbar__delete"
                />
            <item
                android:id="@+id/monument_menu__share"
                android:title="@string/monument_list_toolbar__share"
                />
            <item
                android:id="@+id/monument_menu__maps"
                android:title="@string/monument_list_toolbar__maps"
                />
        </menu>
    </item>


</menu>

