<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_monument_natested_Scroll"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.AddMonumentFragment"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_monument__linear_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_monument_row_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_monument__name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/add_monument__name_edit_text"
            android:text="@string/add_monument__name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_monument__name_edit_text"/>
        <EditText
            android:id="@+id/add_monument__name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp5"
            android:textColor="@color/color_black"
            tools:text="Estadio Santiago Bernabeu"
            android:inputType="text"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/add_monument__name_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument__description_label"/>

        <TextView
            android:id="@+id/add_monument__description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_monument__description"
            android:labelFor="@id/add_monument__description_edit_text"
            app:layout_constraintTop_toBottomOf="@id/add_monument__name_edit_text"
            app:layout_constraintBottom_toTopOf="@id/add_monument__description_edit_text"/>

        <EditText
            android:id="@+id/add_monument__description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="255"
            android:singleLine="false"
            tools:text="Es un gran país y un gran monumento de nuestra nación españa bonita grande fuerte y unida"
            android:textSize="@dimen/dp5"
            android:textColor="@color/color_black"
            android:inputType="text|textMultiLine"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/add_monument__description_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument__city_edit_label" />

        <TextView
            android:id="@+id/add_monument__city_edit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_monument__city_label"
            android:labelFor="@id/add_monument__city_edit_text"
            app:layout_constraintTop_toBottomOf="@id/add_monument__description_edit_text"
            app:layout_constraintBottom_toTopOf="@id/add_monument__city_edit_text"/>

        <EditText
            android:id="@+id/add_monument__city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Madrid"
            android:textSize="@dimen/dp5"
            android:textColor="@color/color_black"
            android:inputType="text"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/add_monument__city_edit_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument__url_extra_information_text_label"/>

        <TextView
            android:id="@+id/add_monument__url_extra_information_text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_monument__url_extra_information_label"
            android:labelFor="@id/add_monument__url_extra_information_text"
            app:layout_constraintTop_toBottomOf="@id/add_monument__city_edit_text"
            app:layout_constraintBottom_toTopOf="@id/add_monument__url_extra_information_text"/>

        <EditText
            android:id="@+id/add_monument__url_extra_information_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp5"
            android:textColor="@color/color_black"
            android:inputType="text"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/add_monument__url_extra_information_text_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument__map_label"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/add_monument__map_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_monument__map_label"
            android:labelFor="@id/add_monument__map"
            app:layout_constraintTop_toBottomOf="@id/add_monument__url_extra_information_text"
            app:layout_constraintBottom_toTopOf="@id/add_monument__map_scroll"
        />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/add_monument__map"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:configChanges="orientation|screenSize"
            app:layout_constraintTop_toBottomOf="@id/add_monument__map_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument_recycler_images_label"/>

        <ImageView
            android:id="@+id/add_monument__map_scroll"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@color/color_trasparent"
            app:layout_constraintTop_toBottomOf="@id/add_monument__map_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument_recycler_images_label"
            android:contentDescription="@string/general__scroll" />

        <TextView
            android:id="@+id/add_monument_recycler_images_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_monument__images_label"
            android:labelFor="@id/add_monument_recycler_images"
            app:layout_constraintTop_toBottomOf="@id/add_monument__map_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument_recycler_images"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_monument_recycler_images"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintTop_toBottomOf="@id/add_monument_recycler_images_label"
            app:layout_constraintBottom_toTopOf="@id/add_monument__btn_send" />

        <Button
            android:id="@+id/add_monument__btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_monument__btn__add"
            android:paddingHorizontal="40sp"
            android:paddingVertical="10sp"
            android:backgroundTint="@color/color_float_action_button"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dp5"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>